--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
     <title> Utkarsh Simha's page </title>
+    <script type="text/javascript">
+        var p = document.createElement("p");
+        p.innerHTML = "This site is under developement";
+        document.body.appendChild( p );
+    </script>
 </head>
 <body>
     <h2> Hello, welcome to Utkarsh Simha's page </h2>
