--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                         <a class="page-scroll" href="#portfolio">Projects</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About Me</a>
+                        <a class="page-scroll" href="#cocurricular">Co-Curricular Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Co-Curricular Experience</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -147,7 +147,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/deeplearning.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/deeplearning.png" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Deep Learning for Speech Recognition in CMU Sphinx</h4>
@@ -161,7 +161,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/partitions.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/partitions.jpg" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Enumeration of Solid Partitions</h4>
@@ -175,7 +175,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cloud.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/cloud.jpg" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Advanced Key Management Capabilities for Openstack</h4>
@@ -189,7 +189,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cpp.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/cpp.jpg" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Implementing Named Parameters for C++</h4>
@@ -203,7 +203,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/kstars.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/kstars.jpg" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>User Interface for Star Hopper in KStars</h4>
@@ -217,7 +217,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/nbanking.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/nbanking.jpg" class="img-responsive mymod" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>N-Banking</h4>
@@ -229,7 +229,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="cocurricular">
         <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -310,7 +310,75 @@
     </section>
 
     <!-- Team Section -->
-    <section id="team" class="bg-light-gray">
+    <section id="about">
+      <!-- Education -->
+      <!-- Research Interests -->
+      <!-- Hobbies -->
+      <div id="myCarousel" class="carousel"> <!--data-ride="carousel" -->
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active col-sm-12">
+            <h2 class="text-center" style="margin-bottom:10px;"> About Me </h2>
+            <div class="col-sm-6" height="500px">
+              <p class="text-center" style="font-family:'Kaushan Script'; font-size:30px;"> Hi! I'm Utkarsh Simha </h4>
+              <br/>
+              <p class="text-left" style="margin-left:10%; font-family:Roboto black; font-size: 18px;" >
+                I'm an under-grad student at PES Institute of Technology pursuing my Bachelor's of Engineering in Computer Science.
+                I am very passionate about Computer Science, especially Applied Machine Learning, Deep Learning and Artificial Intelligence.
+                I plan to pursue a Masters in Computer Science in the aforementioned specializations and probably a PhD in the future!
+              </p>
+            </div>
+            <div class="col-sm-6" height="500px">
+              <p class="text-center" style="font-family:Lato; font-size:30px;"> One of my favorite quotes </h4>
+              <blockquote style="margin-right:10%; font-size:18px;">
+                <p> &nbsp;You can know the name of a bird in all the languages of the world, but when you're finished, you'll know absolutely nothing whatever about the bird. So let's look at the bird and see what it's doing -- that's what counts. I learned very early the difference between knowing the name of something and knowing something.</p>
+                <footer>Richard Feynman</footer>
+              </blockquote>
+            </div>
+            <!-- <div class="well" style="margin-left:5%; width:40%">Hi, I'm Utkarsh Simha!</div> -->
+          </div>
+
+          <div class="item col-sm-12">
+            <h2 class="text-center" style="margin-bottom:10px;"> Research Interests </h2>
+            <div class="col-sm-6" height="500px">
+            </div>
+            <div class="col-sm-6" height="500px">
+            </div>
+          </div>
+
+          <div class="item col-sm-12">
+            <h2 class="text-center" style="margin-bottom:10px;"> Hobbies </h2>
+            <div class="col-sm-6" height="500px">
+            </div>
+            <div class="col-sm-6" height="500px">
+            </div>
+          </div>
+
+          <div class="item col-sm-12">
+            <h2 class="text-center" style="margin-bottom:10px;"> ?? </h2>
+            <div class="col-sm-6" height="500px">
+            </div>
+            <div class="col-sm-6" height="500px">
+            </div>
+          </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" style="color:blue; margin-left:5px; left:15%;"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" style="color:blue; margin-right:5px; right:15%;"></span>
+        </a>
+        <!-- <ol class="carousel-indicators" style="color:blue;">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol> -->
+      </div>
+    </section>
+
+
+
         <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -371,7 +439,7 @@
                 </div>
             </div>
         </div> -->
-    </section>
+    <!-- </section> -->
 
     <!-- Clients Aside -->
     <!-- <aside class="clients">
@@ -488,20 +556,80 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
+                        <div class="modal-body" id="modal1">
                             <!-- Project Details Go Here -->
                             <h2>Deep Learning for Speech Recognition in CMU Sphinx</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                            <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-                            <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
-                            </ul>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            <h5> Interned at Carnegie Mellon University under Prof. Bhiksha Raj and Prof. Rita Singh </h5>
+                            <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                            <!-- <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p> -->
+                            <br/>
+                            <p class="text-left" style="font-size:18px;"> <strong> Problem Statement : </strong> To use a Deep Neural Network in place of the existing Gaussian Mixture Model to predict Hidden Markov Model states in CMU Sphinx Speech Recognition System </p>
+                            <p class="text-left" style="font-size:18px;"> <strong> My task : </strong> To implement a Deep Neural Network which uses the extracted features from the speech utterance and predicts the appropriate HMM state for the corresponding phoneme </p>
+                            <p class="text-left" style="margin-bottom:5px; font-size:18px;"> <strong> Work done : </strong>
+                              <ul>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Implemented a Neural Network</a> using the Theano library </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Performed stochastic gradient descent using mini-batches, over the MNIST dataset. Acquired 97% testing accuracy </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Upon trying the same model for the AN4 speech database, the accuracies were low </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> I performed hyper-parameter optimization using Optunity. Upon performing k-fold cross validation, I identified a set of parameter values for which the loss was the least. The accuracies increased, but was not sufficient. </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Upon reading few papers on DNN-HMM models I implemented techniques such as <em>momentum</em>, <em>dropout</em>, <em>learning rate decay</em>, <em>sparse auto-encoders</em> and by changing the cost function to a <em>Cross-Entropy</em> function, the accuracies increased significantly </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Further increase in accuracies were achieved upon using Yann LeCun's techniques like <em>shuffling inputs</em>, <em>whitening inputs</em> and also upon running it for longer epochs. Currently, the DNN model has a training accuracy of 81.08% and testing accuracy of 69.1%</li>
+                                <!-- <li class="text-left" style="font-size:18px; font-family:Lato;"> Currently, I'm implementing a technique to try and extract patterns in the phoneme boundaries to try and perform better training </li> -->
+                              </ul>
+                            </p>
+                            <p class="text-left" style="margin-bottom:5px; font-size:18px;"> <strong> Status : </strong> Currently implementing a technique to try and extract patterns in the phoneme boundaries to try and perform better training </p>
+                            <!-- <p class="text-left" style="margin-bottom:5px; font-size:16px;"> <strong> Research Papers referred  : </strong>
+                              <ul style="list-style:square">
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://research.microsoft.com/apps/pubs/default.aspx?id=171498"><em>Deep Neural Networks for Acoustic Modeling in Speech Recognition</em></a></li>
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://yann.lecun.com/exdb/publis/pdf/lecun-98b.pdf"><em>Efficient BackProp</em></a></li>
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://www.cs.toronto.edu/~rsalakhu/papers/srivastava14a.pdf"><em>Dropout: A Simple Way to Prevent Neural Networks from Overfitting</em></a></li>
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://www.cs.cmu.edu/~fmetze/interACT/Publications_files/publications/dropout_final.pdf"><em>Improving Low-Resource CD-DNN-HMM using Dropout and Multilingual DNN Training</em></a></li>
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://jmlr.org/papers/volume11/vincent10a/vincent10a.pdf"><em>Stacked Denoising Autoencoders: Learning Useful Representations in a Deep Network with a Local Denoising Criterion</em></a></li>
+                                <li class="text-left" style="font-size:15px; font-family:Lato;"><a href="http://research.microsoft.com/pubs/200675/IS13-DNN-Derived-Features-revised.pdf"><em>A Scalable Approach to Using DNN-Derived Features in GMM-HMM Based Acoustic Modeling For LVCSR</em></a></li>
+                              </ul>
+                            </p> -->
+                            <!-- <p class="text-left" style="margin-bottom:5px; font-size:18px;"> <strong> <a href="https://github.com/utkarshsimha/neural-network/tree/master/an4_training">Code</a> </strong></p> -->
+                            <!-- <i class=""></i> -->
+                            <!-- <i class="fa fa-code" style="color:blue;"></i> -->
+
+                            <!-- <div class="col-md-4"> -->
+                              <a data-toggle="tooltip" title="Code" style="text-small" href="https://github.com/utkarshsimha/neural-network/tree/master/an4_training">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                    <i class="fa fa-code fa-stack-1x fa-inverse"></i>
+                                </span>
+                              </a>
+                              <!-- <p class="text-small">Code</p> -->
+                            <!-- </div> -->
+                            <!-- <div class="col-md-4"> -->
+                              <a data-toggle="tooltip" title="References" class="text-small" href="data/dnn.html">
+                                <span class="fa-stack fa-2x">
+                                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                                    <i class="fa fa-info-circle fa-stack-1x fa-inverse"></i>
+                                </span>
+                              </a>
+                              <br/>
+                              <br/>
+                              <br/>
+                              <br/>
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>   Close Project</button>
+                              <!-- <a class="btn" data-dismiss="modal"> -->
+                                <!-- <span class="fa-stack fa-2x"> -->
+                                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i> -->
+                                    <!-- <i class="fa fa-times fa-stack-1x fa-inverse"></i> -->
+                                <!-- </span> -->
+                              <!-- </a> -->
+                              <!-- </button> -->
+                              <!-- <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button> -->
+                              <!-- <p class="text-small">References</p> -->
+                            <!-- </div> -->
+
+                                <!-- <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p> -->
+                            <!-- <ul class="list-inline"> -->
+                                <!-- <li>Date: July 2014</li> -->
+                                <!-- <li>Client: Round Icons</li> -->
+                                <!-- <li>Category: Graphic Design</li> -->
+                            <!-- </ul> -->
+                            <!-- <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button> -->
                         </div>
                     </div>
                 </div>
