Added backup fonts in case they didn't load

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <link href="fonts/monteserrat.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Kaushan+Script&subset=latin' rel='stylesheet' type='text/css'> -->
     <link href="fonts/kaushanscript.css" rel="stylesheet" type="text/css">
-    <!-- <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic&subset=latin' rel='stylesheet' type='text/css'> -->
-    <link href="fonts/droidserif.css" rel="stylesheet" type="text/css">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Droid+Arial, sans-serif:400,700,400italic,700italic&subset=latin' rel='stylesheet' type='text/css'> -->
+    <link href="fonts/droidArial, sans-serif.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin' rel='stylesheet' type='text/css'> -->
     <link href="fonts/robotoslab.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Courgette&subset=latin' rel='stylesheet' type='text/css'> -->
@@ -359,16 +359,16 @@
           <div class="item active col-sm-12">
             <h2 class="text-center" style="margin-bottom:30px;"> About Me </h2>
             <div class="col-sm-6">
-              <p class="text-center" style="font-family:'Kaushan Script'; font-size:30px; margin-bottom:16px;"> Hi! I'm Utkarsh Simha </h4>
+              <p class="text-center" style="font-family:'Kaushan Script', Arial, sans-serif; font-size:30px; margin-bottom:16px;"> Hi! I'm Utkarsh Simha </h4>
               <br/>
-              <p class="text-left mytext" style="margin-left:10%; font-family: 'Dancing Script', cursive; font-size: 25px; font-weight: 400;" >
+              <p class="text-left mytext" style="margin-left:10%; font-family: 'Dancing Script', cursive, Arial, sans-serif; font-size: 25px; font-weight: 400;" >
                 I'm an under-grad student at PES Institute of Technology pursuing my Bachelor's of Engineering in Computer Science.
                 I am very passionate about Computer Science, especially Deep Learning, Artificial Intelligence and Applied Machine Learning.
                 I plan to pursue a Masters in Computer Science in the aforementioned specializations and probably a PhD in the future!
               </p>
             </div>
             <div class="col-sm-6">
-              <p class="text-center" style="font-family:Lato; font-size:30px;"> One of my favorite quotes </h4>
+              <p class="text-center" style="font-family:Lato, Arial, sans-serif; font-size:30px;"> One of my favorite quotes </h4>
               <blockquote style="margin-right:10%;">
                 <p style="font-size:18px;"> &nbsp;You can know the name of a bird in all the languages of the world, but when you're finished, you'll know absolutely nothing whatever about the bird. So let's look at the bird and see what it's doing -- that's what counts. I learned very early the difference between knowing the name of something and knowing something.</p>
                 <footer style="font-size:20px;">Richard Feynman</footer>
@@ -391,7 +391,7 @@
             </div>
             <div class="col-sm-8 tab-content">
               <div id="deeplearning" class="tab-pane fade in active">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%;">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%;">
                   My main interest of specialization is Deep Learning. I got interested in it when I interned at Carnegie Mellon University where project was to use Deep Learning for Speech Recognition. <br/>
                   I have implemented a standard Neural Network to classify MNIST database handwritten digit images. It does so with a 97% accuracy. In the future, I plan to take this further by implementing a Convolutional Neural Network. <br/>
                   For training on speech from the AN4 database, the Neural Network wasn’t powerful enough, so I implemented Deep Learning techniques like dropout, stacked de-noising auto-encoder, stacked sparse auto-encoders by reading research papers written on them <br/>
@@ -408,7 +408,7 @@
                 </p>
               </div>
               <div id="nlp" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   I developed an interest for Natural Language Processing upon taking the elective offered by Prof. Anantharaman Narayana in my 7th semester. There was an abundance of hands-on component where we implemented NLP techniques. The classes were extremely informative and the course syllabus was on par with graduate level NLP courses which included Recurrent Neural Networks, QA systems, Informational Retrieval etc. <br/>
                   I developed a special interest for the Neural Network component of NLP - building RNN language models and generating sentences out of it. Andrej Karpathy’s blog gives many examples and ideas which are very interesting and fun to do! I also was especially impressed by the Ted Talk generator and Obama speech generator. <br/>
                   I’m have implemented a RNN for language model building but am still working on training it to generate meaningful text. I plan to re-implement it using TensorFlow and its RNN helper classes so I can use an LSTM model. <br/>
@@ -417,7 +417,7 @@
                 </p>
               </div>
               <div id="cpp" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   I first started using C++ during Summer of 2014 when I was asked to implement an algorithm in C++ for better efficiency. Since then, I developed an interest to the flexibility and efficiency offered by C++. I started using C++ really parts of it as and when the requirement came. This lead me with a huge pile of unallocated memory which caused my program to crash! So I started to learn and use smart pointers. <br/>
                   I used a lot more of C++ when I was working for KStars as part of Season of KDE. The majority of the  open-source codebase of KDE is written  C++ and thus I had to implement my project in C++ using the Qt framework. I learnt a lot about the Object Oriented part of C++. <br/>
                   As the language was very interesting, I took up the Advanced C++ elective offered by Prof. N S Kumar. Although the course gave an introduction to the fundamentals, it was more focused on the Standard Template Library and its usage. Along with the elective, I worked on implementing named parameters for C++ as a special topic under Prof. N S Kumar. The course had a guest lecture by Prof. Vijayan who taught us how to use Template Meta-programming. <br/>
@@ -425,27 +425,27 @@
                 </p>
               </div>
               <div id="linux" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   I first used Linux by force during 2011 when my brother ensured that it was the only operating system on the laptop he gave me! I remember having trouble getting the Wi-Fi to work due to the perennial problem between Linux and Dell Broadcom cards. Since then, I have loved using Linux and playing around with it. <br/>
                   I was suggested to try out Arch Linux because the installation only provides you with a terminal, which helps to learn what is the magic employed by the installation wizard. So I started installing Arch Linux. Their wiki is impeccable and was very well written. The best part about Arch is that, to make any configuration or install something, you really need to learn why and how it happens rather than just copy paste a command. As I’m a KDE devout, I used KDE as my Desktop Environment and configured it using Compiz to flaunt its beautiful graphic effects. <br/>
                   I enjoyed my course on Unix System Programming during my 5th semester which taught us how to write programs using Unix System calls. <br/>
                 </p>
               </div>
               <div id="cloud" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   My interest in Cloud Computing began when I opted for it as my special topic during my 4th semester. The course gave a brief intro towards Cloud, nomenclatures and Openstack. It had a lot of hands-on component where we crated instances on a Cloud in our lab. <br/>
                   During my 5th semester, I joined the Center for Cloud Computing and Big Data, headed by Prof. Dinkar Sitaram. I started working on a Cloud Security project in affliation with IBM. Working in the freezing server room was definitely a cool experience! <br/>
                   During Nov 2015, I attended an IEEE International Conference on Cloud Computing and Emerging Markets as a delegate and also to present a poster of my paper. <br/>
                 </p>
               </div>
               <div id="web" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   I got motivated towards Web Developement in my 7th semester by Prof. Srikanth H R when he took Web 2.0 and Rich Internet Applications course. His enthusiastic teaching and hands-on programs got me interested in Web Developement. <br/>
                   This website is my first attempt at building a large-scale website. I definitely am very interested in Web Developement and hope to help people by building simple elegant websites for them. <br/>
                 </p>
               </div>
               <div id="python" class="tab-pane fade">
-                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat; margin-right:5%">
+                <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
                   I've always found Python a great language to write programs in due to its simplicity and the vast number of libraries it has. <br/>
                   I started learning Python during my 5th semester when we had a course called Python Application Programming. Since then,
                 </p>
@@ -741,12 +741,12 @@
                             <p class="text-left" style="font-size:18px;"> <strong> My task : </strong> To implement a Deep Neural Network which uses the extracted features from the speech utterance and predicts the appropriate HMM state for the corresponding phoneme </p>
                             <p class="text-left" style="margin-bottom:5px; font-size:18px;"> <strong> Work done : </strong>
                               <ul>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Implemented a Neural Network</a> using the Theano library </li>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Performed stochastic gradient descent using mini-batches, over the MNIST dataset. Acquired 97% testing accuracy </li>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Upon trying the same model for the AN4 speech database, the accuracies were low </li>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> I performed hyper-parameter optimization using Optunity. Upon performing k-fold cross validation, I identified a set of parameter values for which the loss was the least. The accuracies increased, but was not sufficient. </li>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Upon reading few papers on DNN-HMM models I implemented techniques such as <em>momentum</em>, <em>dropout</em>, <em>learning rate decay</em>, <em>sparse auto-encoders</em> and by changing the cost function to a <em>Cross-Entropy</em> function, the accuracies increased significantly </li>
-                                <li class="text-left" style="font-size:18px; font-family:Lato;"> Further increase in accuracies were achieved upon using Yann LeCun's techniques like <em>shuffling inputs</em>, <em>whitening inputs</em> and also upon running it for longer epochs. Currently, the DNN model has a training accuracy of 81.08% and testing accuracy of 69.1%</li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> Implemented a Neural Network</a> using the Theano library </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> Performed stochastic gradient descent using mini-batches, over the MNIST dataset. Acquired 97% testing accuracy </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> Upon trying the same model for the AN4 speech database, the accuracies were low </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> I performed hyper-parameter optimization using Optunity. Upon performing k-fold cross validation, I identified a set of parameter values for which the loss was the least. The accuracies increased, but was not sufficient. </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> Upon reading few papers on DNN-HMM models I implemented techniques such as <em>momentum</em>, <em>dropout</em>, <em>learning rate decay</em>, <em>sparse auto-encoders</em> and by changing the cost function to a <em>Cross-Entropy</em> function, the accuracies increased significantly </li>
+                                <li class="text-left" style="font-size:18px; font-family:Lato, Arial, sans-serif;"> Further increase in accuracies were achieved upon using Yann LeCun's techniques like <em>shuffling inputs</em>, <em>whitening inputs</em> and also upon running it for longer epochs. Currently, the DNN model has a training accuracy of 81.08% and testing accuracy of 69.1%</li>
                                 <!-- <li class="text-left" style="font-size:18px; font-family:Lato;"> Currently, I'm implementing a technique to try and extract patterns in the phoneme boundaries to try and perform better training </li> -->
                               </ul>
                             </p>
