Fixed typo in css file name

--- a/index_main.html
+++ b/index_main.html
@@ -29,7 +29,7 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Kaushan+Script&subset=latin' rel='stylesheet' type='text/css'> -->
     <link href="fonts/kaushanscript.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Droid+Arial, sans-serif:400,700,400italic,700italic&subset=latin' rel='stylesheet' type='text/css'> -->
-    <link href="fonts/droidArial, sans-serif.css" rel="stylesheet" type="text/css">
+    <link href="fonts/droidserif.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700&subset=latin' rel='stylesheet' type='text/css'> -->
     <link href="fonts/robotoslab.css" rel="stylesheet" type="text/css">
     <!-- <link href='https://fonts.googleapis.com/css?family=Courgette&subset=latin' rel='stylesheet' type='text/css'> -->
