--- a/index_main.html
+++ b/index_main.html
@@ -434,16 +434,16 @@
               </div>
               <div id="cloud" class="tab-pane fade">
                 <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
-                  My interest in Cloud Computing began when I opted for it as my special topic during my 4th semester. The course gave a brief intro towards Cloud, nomenclatures and Openstack. It had a lot of hands-on component where we crated instances on a Cloud in our lab. <br/>
+                  My interest in Cloud Computing began when I opted for it as my special topic during my 4th semester. The course gave a brief intro towards Cloud nomenclatures and Openstack. It had a lot of hands-on component where we crated instances on a Cloud in our lab. <br/>
                   During my 5th semester, I joined the Center for Cloud Computing and Big Data, headed by Prof. Dinkar Sitaram. I started working on a Cloud Security project in affliation with IBM. Working in the freezing server room was definitely a cool experience! <br/>
                   During Nov 2015, I attended an IEEE International Conference on Cloud Computing and Emerging Markets as a delegate and also to present a poster of my paper. <br/>
                 </p>
               </div>
               <div id="web" class="tab-pane fade">
                 <p class="text-left text-justify" style=" font-size:16px; font-family:Montserrat, Arial, sans-serif; margin-right:5%">
-                  I got motivated towards Web Developement in my 7th semester by Prof. Srikanth H R when he took Web 2.0 and Rich Internet Applications course. His enthusiastic teaching and hands-on programs got me interested in Web Developement. <br/>
-                  I opted to do a few projects using Web Developement which can be found in my projects section.
-                  This website is my first attempt at building a large-scale website. I definitely am very interested in Web Developement and hope to help people by building simple elegant websites for them. <br/>
+                  I got motivated towards Web Developement in my 7th semester by Prof. Srikanth H R who took Web 2.0 and Rich Internet Applications course. His enthusiastic teaching and hands-on programs got me interested in the subject. <br/>
+                  I opted to do a few projects using Web-based languages, which can be found in my projects section. <br/>
+                  This website is my first attempt at building a large-scale website. I definitely am very interested in Web Developement and hope to build many more!. <br/>
                 </p>
               </div>
               <div id="python" class="tab-pane fade">
