--- a/index_main.html
+++ b/index_main.html
@@ -65,7 +65,7 @@
                         <a class="page-scroll" href="#work">Work Experience</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#cocurricular">Co-Curricular Experience</a>
@@ -138,7 +138,7 @@
     </section>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <section id="projects" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
